--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 </head>
 <body>
     <h1>Welcome to my personal page!</h1>
-    <p>My first assignment here: <a href="https://progintro.github.io/hw0-gbogris/">hw0 – gbogris</a></p>
+    <p>My first assignment is located here: <a href="https://progintro.github.io/hw0-gbogris/">hw0 – gbogris</a></p>
 </body>
 </html>
