--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>gbogris.github.io</title>
+    <title>GBogris GitHub Pages</title>
 </head>
 <body>
-    <h1>Welcome to my personal page!</h1>
-    </body>
+    <h1>Welcome to my personal GitHub Pages!</h1>
+    <p>My hw0 project is located here: 
+       <a href="https://progintro.github.io/hw0-gbogris/">HW0 – gbogris</a>
+    </p>
+</body>
 </html>
