--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
     <h1>Welcome to my personal GitHub Pages!</h1>
     <p>My hw0 project is located here: 
-       <a href="https://progintro.github.io/hw0-gbogris/">HW0 – gbogris</a>
+       <a href="https://gbogris.github.io/progintro-hw0--gbogris-/">HW0 – gbogris</a>
     </p>
-</body>
+   </body>
 </html>
