--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <h1>Hello from gbogris!</h1>
-    <p>This is my page for assignment0!.</p>
+    <p>This is my page for hw0!.</p>
 </p>
 </html>
 
